@@ -1,3 +1,8 @@
+2018-08-02  John Ericson  <john.ericson@obsidian.systems>
+
+	* testsuite/config-guess.sh: Re-indent with tabs.
+	* testsuite/config-sub.sh: Likewise.
+
 2018-08-02  Ben Elliston  <bje@gnu.org>
 
 	* config.guess: Fix SC2234 diagnostic from Shellcheck ("Remove
